afc: Fix handling of new HouseArrest paths

In b8ad223, we re-rooted the HouseArrest paths to always include
Documents/ as anything closed to the root isn't accessible. This caused
2 problems:
- first, it meant that checking for the new path being "/" wasn't
  correct, as the path would always include at least a "Documents" path
  component
- secondly, it meant that the display name for the root directory for an
  application was incorrect as it was always "Documents" instead of the
  app name.

https://bugzilla.gnome.org/show_bug.cgi?id=764099